KsheerabdhiOrgSetup/force-app/main/default/objects/Leaves__c/Leaves__c.object-meta.xml
<CustomObject>
    <label>Leaves</label>
    <nameField>
        <displayFormat>DSLEAVE/{mm}{yy}-{00}</displayFormat>
        <label>Leave record number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leaves</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>