KsheerabdhiOrgSetup/force-app/main/default/objects/Leaves__c/fields/Employe_first_name__c.field-meta.xml
<CustomField>
    <fullName>Employe_first_name__c</fullName>
    <label>Employe first name</label>
    <referenceTo>Employee_Details__c</referenceTo>
    <relationshipLabel>Leaves</relationshipLabel>
    <relationshipName>Leaves</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>