KsheerabdhiOrgSetup/force-app/main/default/objects/Leaves__c/fields/Leave_Applied_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Leave_Applied_in_Days__c</fullName>
    <formula>Leave_to__c - Leave_from__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Applied in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>