KsheerabdhiOrgSetup/force-app/main/default/objects/Leaves__c/fields/Leave_from__c.field-meta.xml
<CustomField>
    <fullName>Leave_from__c</fullName>
    <label>Leave from</label>
    <type>Date</type>
</CustomField>