KsheerabdhiOrgSetup/force-app/main/default/objects/Leaves__c/fields/Leave_to__c.field-meta.xml
<CustomField>
    <fullName>Leave_to__c</fullName>
    <label>Leave to</label>
    <type>Date</type>
</CustomField>